cleaned the data fully.

--- a/code/Lending_Club_Case_Study.ipynb
+++ b/code/Lending_Club_Case_Study.ipynb
@@ -8425,11 +8425,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f2c213be",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cleaning Additional Data:\n",
+      "\n",
+      "Dataset: loan_df\n",
+      "Column: term\n",
+      "\n",
+      "0    36\n",
+      "1    60\n",
+      "2    36\n",
+      "3    36\n",
+      "4    36\n",
+      "Name: term, dtype: object\n",
+      "\n",
+      "Dataset: loan_df\n",
+      "Column: grade\n",
+      "\n",
+      "0    B\n",
+      "1    C\n",
+      "2    C\n",
+      "3    C\n",
+      "4    A\n",
+      "Name: grade, dtype: category\n",
+      "Categories (7, object): ['G' < 'F' < 'E' < 'D' < 'C' < 'B' < 'A']\n",
+      "\n",
+      "Cleaning successful.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clean_additional_data():\n",
+    "    # Clean 'term' column\n",
+    "    loan_df['term'] = loan_df['term'].apply(lambda x: np.nan if pd.isnull(x) else x.strip(' ').strip(' months'))\n",
+    "\n",
+    "    # Display cleaned 'term' column\n",
+    "    print(\"\\nCleaning Additional Data:\\n\")\n",
+    "    print(f\"Dataset: loan_df\\nColumn: term\\n\")\n",
+    "    print(loan_df['term'].head())\n",
+    "    \n",
+    "    # Clean 'grade' column\n",
+    "    level_order = ['G', 'F', 'E', 'D', 'C', 'B', 'A']\n",
+    "    ordered_cat = pd.api.types.CategoricalDtype(ordered=True, categories=level_order)\n",
+    "    loan_df['grade'] = loan_df['grade'].astype(ordered_cat)\n",
+    "\n",
+    "    # Display cleaned 'grade' column\n",
+    "    print(\"\\nDataset: loan_df\\nColumn: grade\\n\")\n",
+    "    print(loan_df['grade'].head())\n",
+    "    \n",
+    "    print(\"\\nCleaning successful.\")\n",
+    "\n",
+    "# Assume loan_df is the DataFrame to be cleaned\n",
+    "clean_additional_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "703b2535",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7783ff85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned dataset saved to: /Users/mit/Documents/IIITB/Lending_Club_CaseStudy/Lending_Club_CaseStudy/dataset/loan_clean.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save Cleaned Dataset\n",
+    "\n",
+    "# Step 1: Create a cleaned copy of the original DataFrame\n",
+    "loan_df_clean = loan_df.copy(deep=True)\n",
+    "\n",
+    "# Step 2: Save the cleaned data to a CSV file\n",
+    "output_folder = '/Users/mit/Documents/IIITB/Lending_Club_CaseStudy/Lending_Club_CaseStudy/dataset'\n",
+    "csv_filename = 'loan_clean.csv'\n",
+    "csv_path = f'{output_folder}/{csv_filename}'\n",
+    "\n",
+    "loan_df_clean.to_csv(csv_path, index=False)\n",
+    "\n",
+    "# Step 3: (Optional) Load the cleaned dataset back into the DataFrame when necessary\n",
+    "# Uncomment the following line if you want to load the cleaned dataset\n",
+    "# loan_df_clean = pd.read_csv(csv_path, delimiter=',')\n",
+    "\n",
+    "# (Optional) Reassign the cleaned DataFrame back to the original DataFrame\n",
+    "loan_df = loan_df_clean.copy(deep=True)\n",
+    "\n",
+    "print(f\"Cleaned dataset saved to: {csv_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce819352",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
